# POS_System

./: README.md  app.db  assignment2.md  pyproject.toml  requirements.txt
app/: main.py
app/controllers/: products_controller.py  receipts_controller.py  sales_controller.py  units_controller.py
app/db/: database.py
app/models/: product.py  receipt.py  sales_report.py  unit.py
app/repositories/: unit_repository.py
app/schemas/: product.py  receipt.py  sales.py  unit.py
app/services/: product_service.py  receipt_service.py  sales_service.py  unit_service.py
tests/: conftest.py  test_products.py  test_receipts.py  test_sales.py  test_units.py
