[tool.poetry]
name = "playground"
version = "0.0.1"
description = "FUT 2024 playground."
authors = ["FUT Dev <dev@freeuni.edu.ge>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "*"

[tool.poetry.group.lint.dependencies]
mypy = "*"
ruff = "*"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = true

[tool.ruff]
target-version = "py311"

lint.select = ["E", "F", "I"]
lint.ignore = []
lint.fixable = ["A", "B", "C", "D", "E", "F", "I"]
lint.unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
branch = true
source = []

[tool.coverage.report]
skip_empty = true
skip_covered = true
show_missing = true

